--- a/css/freelancer.css
+++ b/css/freelancer.css
@@ -5633,7 +5633,7 @@ a.badge-dark:focus, a.badge-dark.focus {
   color: #fff;
   text-align: center;
   white-space: nowrap;
-  background-color: #1abc9c;
+  background-color: #2a7365;
   -webkit-transition: width 0.6s ease;
   transition: width 0.6s ease;
 }
